[package]
name = "pinocchio-escrow"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
five8_const = "1.0.0"
pinocchio = "0.10.0"
pinocchio-associated-token-account = "0.3.0"
pinocchio-pubkey = "0.3.0"
pinocchio-system = "0.5.0"
pinocchio-token = "0.5.0"
shank = "0.4.6"
solana-program-log = "1.1.0"
spl-associated-token-account-interface = "2.0.0"

[dev-dependencies]
litesvm = "0.9.0"
litesvm-token = "0.9.0"
solana-instruction = "3.1.0"
solana-keypair = "3.1.0"
solana-message = "3.0.1"
solana-native-token = "3.0.0"
solana-program = "3.0.0"
solana-pubkey = "4.0.0"
solana-signer = "3.0.0"
solana-transaction = "3.0.2"
